--- a/web/index.html
+++ b/web/index.html
@@ -23,17 +23,13 @@
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-
-  <meta name="apple-mobile-web-app-title" content="micmusic">
-
+  <meta name="apple-mobile-web-app-title" content="mic_geezo_explore">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-
-  <title>micmusic</title>
-
+  <title>mic_geezo_explore</title>
   <link rel="manifest" href="manifest.json">
 
   <script>
